--- a/vars/Ubuntu-16.04.yml
+++ b/vars/Ubuntu-16.04.yml
@@ -71,4 +71,5 @@ php_ini: /etc/php/7.0/apache2/php.ini
 php_ini_nginx: /etc/php/7.0/fpm/php.ini
 php_confenable: /etc/php/7.0/apache2/conf.d
 nginx_sock: /run/php/php7.0-fpm.sock
+fpm_user: www-data
 
