--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,9 @@ misp_webserver: 'apache2'
 misp_key_file: "{{ misp_rootdir }}/.ht_key"
 
 misp_testing: false
+misp_testing_user: ''
+misp_testing_user_home: ''
+userkey: ''
 
 ## value for kitchen forwarding
 misp_base_url: http://127.0.0.1:8888
@@ -40,6 +43,7 @@ misp_web_pass: admin
 ## extra users, the password is only valid once. user will be asked to update
 ## orgid (default): 1/ORGNAME
 ## roleid (default): 1/admin, 2/OrgAdmin, 3/user, 4/publisher, 5/sync user, 6/readonly
+misp_webusers_list: []
 #misp_webusers_list:
 # - { u: dupont@admin.test, p: 'dupont_passphrase.', email: dupont@localhost, org: 1, role: 2 }
 # - { u: dupond@admin.test, p: 'dupond_passphrase.', email: dupond@localhost, org: 1, role: 4 }
@@ -48,7 +52,12 @@ misp_web_pass: admin
 
 misp_email_contact: email@address.com
 
-## TODO: default provided feeds
+## default provided feeds. you need to know their id
 misp_enable_feeds:
- - CIRCL OSINT Feed
- - The Botvrij.eu Data
+# - CIRCL OSINT Feed
+ - 1
+# - The Botvrij.eu Data
+ - 2
+
+misp_disable_feeds: []
+
