--- a/vars/Ubuntu-12.04.yml
+++ b/vars/Ubuntu-12.04.yml
@@ -16,6 +16,7 @@ misp_pkg_list:
  - python-dev
  - python-pip
  - python-virtualenv
+ - python-setuptools
  - libxml2-dev
  - libxslt1-dev
  - zlib1g-dev
@@ -29,6 +30,8 @@ misp_pkg_list:
 # misp-modules
  - python3
 # - python3-pip
+# available ?
+ - libpq5
  - acl
  - sudo
 ## pillow? not needed
