--- a/vars/Ubuntu-16.04.yml
+++ b/vars/Ubuntu-16.04.yml
@@ -38,6 +38,8 @@ misp_pkg_list:
  - libjpeg8-dev
  - zlib1g-dev
  - libfreetype6-dev
+## if pyzmq?
+# - libczmq-dev
 
 mysql_svc: mysql
 rng_svc: rng-tools
