--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ env:
 #    run_opts: "--cap-add SYS_ADMIN"
 #    run_opts: "--cap-add net_admin"
 ## FIXME! travis: 'No output has been received in the last 10m0s, this potentially indicates a stalled build or something wrong with the build itself.'
-  - distribution: ubuntu
-    version: 14.04
-    init: /sbin/init
+#  - distribution: ubuntu
+#    version: 14.04
+#    init: /sbin/init
 #    run_opts: ""
-    run_opts: "--privileged"
+#    run_opts: "--privileged"
 #  - distribution: alpine
 #    version: 3.4
 #    init: /sbin/init
