--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -18,7 +18,7 @@
   changed_when: false
   ignore_errors: true
 - name: pip dependencies for testing
-  pip: name={{ item }}
+  pip: name={{ item }} executable=pip3
   with_items:
     - coveralls
     - codecov
