--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -11,6 +11,7 @@
 #      become_user: "{{ user }}"
       register: userInit
       no_log: true
+      failed_when: "'Error' in userInit.stderr"
 #    - debug: var=userInit
     - set_fact:
         userkey: "{{ userInit.stdout }}"
@@ -29,5 +30,5 @@
 ## FIXME! fail if returns 'Script aborted: MISP instance already initialised.'
 - name: check no script error
   fail: msg="Fatal! error retrieving user key"
-  when: userkey.find("Script aborted{{ ':' }} MISP instance already initialised.") != -1
+  when: userkey.find("Script aborted{{ ':' }} MISP instance already initialised.") != -1 or userkey == ''
 
