README update, add base support for git signed commit retrieve

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -65,3 +65,7 @@ misp_enable_feeds:
 
 misp_disable_feeds: []
 
+## Note: don't put hex code as ansible misinterpreted them
+misp_git_signing_keys:
+  - '09E2CD4944E6CBCD'
+
