--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -67,7 +67,6 @@
   register: import
   changed_when: "'imported: [1-9]+' in import.stdout"
 
-## FIXME! doing update?
 - stat: path={{ misp_rootdir }}/INSTALL
   register: m
 - name: git clone MISP
@@ -82,13 +81,17 @@
 #    track_submodules: yes
 #  when: not m.stat.exists
 
-## FIXME! is it the right way to do minor update?
-- name: updating existing MISP
-  command: "git pull chdir={{ misp_rootdir }}"
-#  command: "git pull --verify-signatures chdir={{ misp_rootdir }}"
+## https://github.com/MISP/MISP/blob/e763e7646f7bbae5183ab93df840501d88c47119/INSTALL/UPDATE.txt
+- name: updating existing MISP - minor releases
+  command: "git pull origin {{ misp_version }} chdir={{ misp_rootdir }}"
+#  command: "git pull origin {{ misp_version }} --verify-signatures chdir={{ misp_rootdir }}"
   when: m.stat.exists
   register: gitpull_result
   changed_when: not ("'Already up-to-date.' in gitpull_result.stdout")
+- name: updating existing MISP submodules - minor releases
+  command: "git submodule update --init --force chdir={{ misp_rootdir }}"
+  when: gitpull_result.changed
+
 
 ## must be after git cloning MISP
 - include: apache2.yml
