--- a/test/travis/Dockerfile.ubuntu-12.04
+++ b/test/travis/Dockerfile.ubuntu-12.04
@@ -3,12 +3,10 @@ RUN apt-get update
 
 # Install Ansible
 RUN env DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common python-software-properties git
-RUN apt-add-repository -y ppa:ansible/ansible
+#RUN apt-add-repository -y ppa:ansible/ansible
 RUN apt-get update
-RUN apt-get install -y ansible
-
-COPY initctl_faker .
-RUN chmod +x initctl_faker && rm -fr /sbin/initctl && ln -s /initctl_faker /sbin/initctl
+RUN apt-get install -y python-pip python-dev libffi-dev
 
 # Install Ansible inventory file
+RUN mkdir /etc/ansible
 RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
