ansible2.4 seems stricter on user with nologin shell

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -266,6 +266,8 @@
     - { s: "gpg --homedir {{ misp_rootdir }}/.gnupg --export --armor {{ misp_email }} --batch > {{ misp_rootdir }}/app/webroot/gpg.asc", c: "{{ misp_rootdir }}/app/webroot/gpg.asc" }
   become: yes
   become_user: "{{ www_user }}"
+  become_method: su
+  become_flags: '-s /bin/sh'
 ## it seems to be done by gpg
 #- command: wipe -q -y /var/tmp/gpg-template
 #  when: not gkey.stat.exists
