--- a/test/vagrant/Vagrantfile
+++ b/test/vagrant/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
        #ansible.verbose = "vvvv"
        #ansible.host_key_checking = false
        #ansible.limit = 'all'
-       ansible.sudo = true
+       ansible.become = true
        ansible.extra_vars = { ansible_ssh_user: 'vagrant', misp_base_url: 'http://127.0.0.1:8888' }
        ansible.groups = {
           "myrole" => ["vhost" ],
