PyMisp list users issue: misp_verifycert = False, ignore_errors

--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -28,6 +28,7 @@
   with_items:
     - { re: "^misp_url = .*", l: "misp_url = \"{{ misp_base_url }}\"" }
     - { re: "^misp_key = .*", l: "misp_key = \"{{ userkey }}\"" }
+    - { re: '^misp_verifycert = .*', l: "misp_verifycert = {{ misp_pymisp_verifycert }}" }
   no_log: true
 
 - name: flush handlers as we need service up for API call
