use template for apache config

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,6 +27,7 @@ userkey: ''
 misp_base_ip: 127.0.0.1
 misp_base_port: 8888
 misp_base_url: http://127.0.0.1:8888
+misp_servername: misp.local
 misp_email: root@localhost
 misp_gpg_email: "{{ misp_email }}"
 misp_gpg_homedir: "{{ misp_rootdir }}/.gnupg"
