--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,7 +46,7 @@ misp_proxy_pass: ''
 misp_db_user: misp
 misp_db_pass: mispdb_pass_to_change_fast
 misp_web_user: admin@admin.test
-misp_web_pass: admin
+misp_web_pass: admin_pass_to_change
 ## extra users, the password is only valid once. user will be asked to update
 ## orgid (default): 1/ORGNAME
 ## roleid (default): 1/admin, 2/OrgAdmin, 3/user, 4/publisher, 5/sync user, 6/readonly
