travis/kitchen: add Ubuntu 18.04

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,13 @@ env:
     suite: default
     ansible_version: 2.4.0.0
   - distribution: ubuntu
+    version: 18.04
+    init: /lib/systemd/systemd
+    run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
+    suite: default
+    ansible_version: 2.4.3.0
+    ansible_extra_vars: "'-e misp_pymisp_use=false'"
+  - distribution: ubuntu
     version: 16.04
     init: /lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
