--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -119,10 +119,15 @@
 #    - redis
 #  when: ansible_os_family == "RedHat" or ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
+- name: check if existing Cakeresque config
+  stat: path="{{ misp_rootdir }}/app/Plugin/CakeResque/Config/config.php"
+  register: cakeconfig
 - name: setup MISP Cake config
-  command: "rsync -ci {{ misp_rootdir }}/INSTALL/setup/config.php {{ misp_rootdir }}/app/Plugin/CakeResque/Config/config.php"
-  register: rsync_result
-  changed_when: 'rsync_result.stdout != ""'
+  copy:
+    src: "{{ misp_rootdir }}/INSTALL/setup/config.php"
+    dest: "{{ misp_rootdir }}/app/Plugin/CakeResque/Config/config.php"
+    remote_src: true
+  when: not cakeconfig.stat.exists
 
 - name: validate permissions
   file: "dest={{ item.f }} mode={{ item.m }} owner={{ www_user }} group={{ www_user }} state=directory"
